# dotfiles

./: README.md
c940/.config/: fish
desktop/.config/river/: init
generic/.config/fish/: config.fish
generic/.config/foot/: foot.ini
generic/.config/meiya/: Cargo.toml  LICENSE  README.md  scheme.toml
generic/.config/meiya/src/: main.rs
