[package]
name = "meiya"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", default-features = false, features = ["std", "color", "help", "usage", "derive", "cargo"] }
dirs = "5.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
shellexpand = "2.0"
toml = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
panic = "abort"
